--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "jwt-decode": "^3.1.2",
+    "swiper": "5.4.3",
     "vue": "^2.6.11",
     "vue-amap": "^0.5.10",
+    "vue-awesome-swiper": "4.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.3.0"
   },
